--- a/announcements.html
+++ b/announcements.html
@@ -33,6 +33,10 @@
         </div>
     </main>
 
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
+
     <script src="./JS/announcements.js"></script>
 </body>
 </html>
