--- a/dashboard.html
+++ b/dashboard.html
@@ -46,6 +46,10 @@
             </ul>
         </div>
     </div>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
+
 
     <script src="./JS/dashboard.js"></script>
 </body>
