--- a/exam_results.html
+++ b/exam_results.html
@@ -45,7 +45,7 @@
                         <th>Final</th>
                         <th>Total</th>
                         <th>Grade</th>
-                        <th>Comment</th>
+                        <th id="last th">Comment</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -58,6 +58,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
 
     <script src="./JS/script.js"></script>
     <script src="./JS/exam_results.js"></script>
