--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <img src="./img/download.jfif" alt="Welcome to DBU" class="page-image">
-        <h2>DBU Information Desk </h2>
+        <h2>DBU Information Desk & Direction Management System </h2>
 
         <div id="login-form">
             <h3>Login</h3>
