--- a/input_results.html
+++ b/input_results.html
@@ -90,6 +90,9 @@
             </tbody>
         </table>
     </main>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
     <script src="./JS/script.js"></script>
     <script src="./JS/input_results.js"></script>
 </body>
