--- a/map.html
+++ b/map.html
@@ -37,13 +37,16 @@
                 <option value="cafe">Cafe</option>
                 <option value="library">Library</option>
             </select>  
-            <label for="location-select">Destination:</label>
+            <!-- <label for="location-select">Destination:</label> -->
             <select id="location-select">
             </select>
         </div>
         <div id="map-container">
         </div>
     </main>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
 
     <script src="./leaflet/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
