--- a/notifications.html
+++ b/notifications.html
@@ -36,6 +36,9 @@
             </ul>
         </div>
     </main>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
 
     <script src="./JS/notifications.js"></script>
 </body>
