--- a/events.html
+++ b/events.html
@@ -38,6 +38,9 @@
             </ul>
         </div>
     </main>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
 
     <script src="./JS/events.js"></script>
 </body>
