--- a/manage_system.html
+++ b/manage_system.html
@@ -29,6 +29,9 @@
             <a href="input_results.html">Input Exam Results</a>
         </div>
     </main>
+    <footer>
+        <p>Copyright © 2025 DBUIDDMS, All rights reserved.</p>
+    </footer>
 
     <script src="./JS/manage_system.js"></script>
 </body>
